# estrutura_workshop

./: .gitignore  pyproject.toml
app/: main.py
app/pipeline/: extract.py
