[tool.poetry]
name = "ETL-melhores-praticas"
version = "0.1.0"
description = ""
authors = ["Humberto Nagato <humberto.nagatog@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


